force-app/main/default/objects/Contact/fields/Application_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Submission_Date__c</fullName>
    <label>Application Submission Date</label>
    <type>Date</type>
</CustomField>