force-app/main/default/objects/Contact/fields/Grant_Applicant_Phone_Key__c.field-meta.xml
<CustomField>
    <fullName>Grant_Applicant_Phone_Key__c</fullName>
    <description
  >Digits-only phone used as the external id for grant applicant upsert.</description>
    <externalId>true</externalId>
    <label>Grant Applicant Phone Key</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>