force-app/main/default/objects/Contact/fields/Support_Option__c.field-meta.xml
<CustomField>
    <fullName>Support_Option__c</fullName>
    <label>Support Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Option One</fullName>
            </value>
            <value>
                <fullName>Option Two</fullName>
            </value>
            <value>
                <fullName>Option Three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>