force-app/main/default/objects/Contact/validationRules/Prevent_Negative_Monthly_Income.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Negative_Monthly_Income</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(TEXT(Application_Status__c))),
    NOT(ISBLANK(Monthly_Income__c)),
    Monthly_Income__c &lt; 0
)</errorConditionFormula>
    <errorDisplayField>Monthly_Income__c</errorDisplayField>
    <errorMessage>Monthly income cannot be negative.</errorMessage>
</ValidationRule>