force-app/main/default/objects/Contact/validationRules/Validate_Singapore_Postal_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Singapore_Postal_Code</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(TEXT(Application_Status__c))),
    NOT(ISBLANK(MailingPostalCode)),
    NOT(REGEX(MailingPostalCode, &quot;^[0-9]{6}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>MailingPostalCode</errorDisplayField>
    <errorMessage>Enter a valid 6-digit Singapore postal code.</errorMessage>
</ValidationRule>